Fri Aug 18 21:32:06 CEST 2002   Frediano Ziglio <freddy77@angelfire.com>
	* src/ctlib/unittests/t0006.c:
	- add some tests for converting from char to money
	- print failed test line
	* src/tds/convert.c: fix conversion from char to money
	- handle not terminated string correctly
	- fix strange sintax like '++++-123.12.3'
	- do not overflow buffer for digits
	- do not convert '1.11111' to 11.1111
	- do not handle syntax like 'foo'
	* src/tds/login.c:
	- do not core on out of memory

Fri Aug 18 14:26:05 CEST 2002   Frediano Ziglio <freddy77@angelfire.com>
	* src/ctlib/cs.c:
	- fix 2 off-by-one buffer overflow in cs_convert
	- use len returned instead of strlen, work in unterminated string
 	  and string containing '\0'
	* src/dblib/dblib.c:
	- fix 2 buffer underflow rtrimming string
	- use len returned for string
	* src/odbc/convert_sql2string.c:
	- use len returned for string
	* src/odbc/convert_tds2sql.c:
	- added some FIXME comment

Fri Aug 18 13:40:50 CEST 2002   Frediano Ziglio <freddy77@angelfire.com>
	* src/tds/convert.c:
	- add function to handle return to char
	- add some TODO and FIXME
	- fixed a small off-by-one buffer 
	  overflow converting from char to date

Fri Aug 18 10:52:03 CEST 2002   Frediano Ziglio <freddy77@angelfire.com>
	* src/tds/convert.c:
	- return sizeof(TDS_MONEY) instead of 8 (not always 8 byte long)
	- add conversion from money4 to int type
	- add conversion from money4 to real type
	- fix bug converting from money4 to float on 64bit machine
	- fix possible precision loss converting from money to float
	- check overflow converting from money to int

Fri Aug 17 16:17:09 CEST 2002   Frediano Ziglio <freddy77@angelfire.com>
	* src/ctlib/Makefile.am src/dblib/Makefile.am src/odbc/Makefile.am:
	- add link to iconv library if needed

Fri Aug 17 11:56:48 CEST 2002   Frediano Ziglio <freddy77@angelfire.com>
	* src/ctlib/cs.c:
	- count terminator for resultlen if string terminated
	* src/ctlib/unittests/Makefile.am src/ctlib/unittests/t0006.c: